# CurrencyExchangeFastAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 8be710088486_initial_migration.py
app/: __init__.py  app_factory.py  config.py  database.py  dependencies.py  exception_handler.py  exceptions.py  lifespan.py  schemas.py
app/models/: currency.py  exchangerate.py
app/repositories/: currency_repository.py  exchangerate_repository.py
app/routers/: currency.py  exchange.py  exchangerate.py
app/service/: currency_service.py  exchange_service.py  exchangerate_service.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  database.py  exceptions.py  main.py  schemas.py
backend/app/repositories/: currency_repository.py
backend/app/routers/: exchangerate.py
backend/app/service/: exchangerate_service.py
frontend/: Dockerfile  index.html
frontend/js/: app.js
nginx/: Dockerfile  my.conf
nginx/frontend/: index.html  launch-local-nginx.sh
nginx/frontend/js/: app.js
tests/: conftest.py  test_main.py
tests/integration_tests/: test_endpoints.py
tests/unit_tests/: conftest.py  test_service.py
