[project]
name = "currencyexchangefastapi-dev"
version = "0.1.0"
description = ""
authors = [
    { name = "mandalorianec", email = "173474864+mandalorianec@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
trio = "^0.32.0"
ruff = "^0.14.10"
mypy = "^1.19.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py312"
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # FastAPI
    "FAST",
    # flake8-async
    "ASYNC",
    #flake8-simplify
    "SIM"
]
ignore = ["SIM105"]
[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
split-on-trailing-comma = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double" # Использовать двойные кавычки
indent-style = "space" # Отступы пробелами
skip-magic-trailing-comma = true # не разбивать строки вертикально, если влезают
line-ending = "auto"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
pretty = true
ignore_missing_imports = true
exclude = ["alembic/"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


