[project]
name = "currencyexchangefastapi-dev"
version = "0.1.0"
description = ""
authors = [
    { name = "mandalorianec", email = "173474864+mandalorianec@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.121.3,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
trio = "^0.32.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


